# knowledge-agentic

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README_EN.md
code/: .coveragerc  .dockerignore  Dockerfile  README.md  coverage_final.json  env.example  init_db.py  migrate_ingest_tasks.py  pyproject.toml
code/app/: __init__.py  main.py
code/app/api/v1/: api.py
code/app/core/: ai_provider_factory.py  base_factory.py  commands.py  config.py  config_builders.py  config_manager.py  config_mediator.py  config_priority.py  decorators.py  dependencies.py  endpoint_utils.py  initializers.py  llm_constants.py  logging.py  mask_strategy.py  middleware.py  prototype.py  response_builders.py  retry.py  service_mediator.py  token_pricing.py  validation_chain.py  validators.py  version_config.py
code/app/core/adapters/: __init__.py  chroma_adapter.py  vector_store_adapter.py
code/app/core/ai_provider/: __init__.py  base.py  base_factory.py  config.py  registry.py  unified.py
code/app/core/bridges/: __init__.py  embedding_bridge.py  implementations.py  llm_bridge.py
code/app/core/builders/: chat_builder.py
code/app/db/: __init__.py  factory.py  session.py
code/app/models/: __init__.py  conversation.py  model_config.py  models.py
code/app/repositories/: __init__.py  base.py  conversation_repository.py
code/app/schemas/: chat.py  conversation.py  document.py  ingest.py  model_config.py  response.py  search.py
code/app/services/: __init__.py  agent_service.py  base_config_service.py  base_config_service_extended.py  chat_service.py  config_template_service.py  connection_test_service.py  conversation_service.py  document_export_service.py  document_tree_service.py  embedding_config_service.py  endpoint_config_service.py  ingest_optimization_service.py  ingest_service.py  llm_provider.py  local_model_service.py  model_config_service.py  search_service.py  vector_repair_service.py  visitor_export_service.py
code/app/utils/: __init__.py  embedding_factory.py  excel_loader.py  llm_factory.py  llm_proxy.py  pptx_loader.py  sensitive_data_filter.py  timezone_helper.py  zhipuai_embeddings.py
code/tests/: conftest.py  test_additional_coverage.py  test_ai_provider_config.py  test_ai_provider_factory_module.py  test_ai_provider_providers.py  test_ai_provider_unified.py  test_api.py  test_api_coverage.py  test_api_endpoints_coverage.py  test_api_exception_paths.py  test_async_ingest.py  test_base_config.py  test_batch_iterator.py  test_bridges.py  test_chat_service.py  test_chroma_adapter.py  test_composite.py  test_config.py  test_config_builders.py  test_config_mediator.py  test_config_template_service.py  test_config_validators.py  test_config_validators_comprehensive.py  test_connection_test_service.py  test_conversation_api.py  test_conversation_repository.py  test_conversation_service.py  test_db_factory.py  test_decorators.py  test_di_container.py  test_di_decorator.py  test_document_export_service.py  test_document_tree_service.py  test_embedding_config_service.py  test_embedding_factory.py  test_error_handling.py  test_excel_loader.py  test_ingest_service.py  test_initializers.py  test_iterators.py  (+31 more)
(+245 files in other folders)
